# astrobotic-apriltag

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh
cmake/: ApriltagsCPPConfig.cmake.in  ApriltagsCPPTargets.cmake.in
example/: CMakeLists.txt  apriltags_demo.cpp
services/: CMakeLists.txt
services/TagLocalization/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  TagFamily.cc
src/apriltag/: CMakeLists.txt
src/tagdetector/: CMakeLists.txt  tag_detector.cpp  tag_detector.hpp
